another git repo build a

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "site",
+    "projectName": "reasoning_rock",
     "version": "2.0",
     "frontend": "javascript",
     "javascript": {
